--- a/scenario-01/prometheus.yml
+++ b/scenario-01/prometheus.yml
@@ -1,11 +1,13 @@
 scrape_configs:
   - job_name: service-a
     scrape_interval: 4s
+    fallback_scrape_protocol: PrometheusText0.0.4
     static_configs:
       - targets: ['service-a:5000']
 
   - job_name: service-b
     scrape_interval: 4s
+    fallback_scrape_protocol: PrometheusText0.0.4
     static_configs:
       - targets: ['service-b:5001']
 
